WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147273
JavaScriptCore bmalloc should not register its malloc zone more than once
https://bugs.webkit.org/show_bug.cgi?id=147273
Summary
JavaScriptCore bmalloc should not register its malloc zone more than once
Geoffrey Garen
Reported
2015-07-24 13:53:11 PDT
JavaScriptCore bmalloc should not register its malloc zone more than once
Attachments
Patch
(3.00 KB, patch)
2015-07-24 13:56 PDT
,
Geoffrey Garen
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-07-24 13:56:46 PDT
Created
attachment 257474
[details]
Patch
Geoffrey Garen
Comment 2
2015-07-24 13:57:03 PDT
<
rdar://problem/20227387
>
Andreas Kling
Comment 3
2015-07-24 13:59:43 PDT
Comment on
attachment 257474
[details]
Patch r=me
Geoffrey Garen
Comment 4
2015-07-24 14:04:28 PDT
Committed
r187360
: <
http://trac.webkit.org/changeset/187360
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug